test/parser.d/invalid/reassign5.souc.bad
f(x: Integer): Integer = x

main() = do
	f = 3
	print $f
